Home page spacing issue fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -458,7 +458,7 @@ div.scrollmenu a:hover {
 
 .banner {
     width: 100%;
-    height: 250px;
+    height: 185px;
     object-fit: cover;
 }
 .categoryContainer {
